# rpi-BLE-leds

./: Cargo.toml  README.md
assets/: index.html  index.js
device-macro/: Cargo.toml
device-macro/src/: lib.rs
devices/: Cargo.toml
devices/src/: esp.rs  govee.rs  keep_alive_job.rs  lib.rs
esp/: Cargo.toml
esp-code/: Cargo.toml  sdkconfig.defaults
esp-code/src/: main.rs
src/: main.rs
templates/: index.html
