[package]
name = "gatt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
env_logger = "0.10.0"
futures = "0.3.27"
libdbus-sys = "0.2.4"
tokio = { version = "1.26.0", features = ["full"] }
axum = "0.6.15"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }

